# anki-video2card

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  bundle_log.txt  imgui.ini
.github/workflows/: pr.yml  release.yml
assets/: logo.icns
docs/: building.md  installation.md
scripts/: convert_jmdict.py  convert_pitch_accent.py  download_translation_model.py  format.sh
src/: Application.cpp  Application.h  main.cpp
src/ai/: GoogleTextProvider.cpp  GoogleTextProvider.h  ITextAIProvider.h  LocalAnalyzerAdapter.cpp  LocalAnalyzerAdapter.h  XAiTextProvider.cpp  XAiTextProvider.h
src/api/: AnkiConnectClient.cpp  AnkiConnectClient.h
src/audio/: AudioPlayer.cpp  AudioPlayer.h
src/config/: ConfigManager.cpp  ConfigManager.h
src/core/: FieldTypes.h  Logger.cpp  Logger.h
src/core/sdl/: SDLWrappers.h
src/language/: ILanguage.h  JapaneseLanguage.h
src/language/analyzer/: ILocalAnalyzer.h  LocalAnalyzer.cpp  LocalAnalyzer.h  SentenceAnalyzer.cpp  SentenceAnalyzer.h
src/language/audio/: ForvoClient.cpp  ForvoClient.h  IAudioSource.h
src/language/dictionary/: IDictionaryClient.h  JMDictionary.cpp  JMDictionary.h  SakuraParisClient.cpp  SakuraParisClient.h
src/language/furigana/: IFuriganaGenerator.h  JapaneseCharUtils.cpp  JapaneseCharUtils.h  MecabBasedFuriganaGenerator.cpp  MecabBasedFuriganaGenerator.h
src/language/morphology/: IMorphologicalAnalyzer.h  MecabAnalyzer.cpp  MecabAnalyzer.h  MecabToken.h
src/language/pitch_accent/: IPitchAccentLookup.h  PitchAccentDatabase.cpp  PitchAccentDatabase.h
src/language/services/: CTranslate2Service.cpp  CTranslate2Service.h  DeepLService.cpp  DeepLService.h  GoogleTranslateService.cpp  GoogleTranslateService.h  ILanguageService.h
src/language/translation/: CTranslate2Translator.cpp  CTranslate2Translator.h  DeepLTranslator.cpp  DeepLTranslator.h  GoogleTranslateTranslator.cpp  GoogleTranslateTranslator.h  ITranslator.h
src/ui/: AnkiCardSettingsSection.cpp  AnkiCardSettingsSection.h  ConfigurationSection.cpp  ConfigurationSection.h  StatusSection.cpp  StatusSection.h  UIComponent.h  VideoSection.cpp  VideoSection.h
src/ui/fields/: CardField.cpp  CardField.h
src/utils/: Base64Utils.cpp  Base64Utils.h  FileUtils.cpp  FileUtils.h  ImageProcessor.cpp  ImageProcessor.h  LastVideoPath.cpp  LastVideoPath.h  VideoState.cpp  VideoState.h
